--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -713,6 +713,10 @@ mat-icon {
   &.accent {
     color: var(--accent-color) !important;
   }
+
+  &.orange {
+    color: var(--orange) !important;
+  }
 }
 
 button {
