--- a/src/app/features/modals/settings/about-modal/about-modal.component.html
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="modal-content" #content (scroll)="onScroll(content)">
-    <mat-icon svgIcon="rclone" class="app-icon"></mat-icon>
+    <img src="assets/rclone.svg" alt="Rclone Logo" class="app-icon" />
     <h2 class="app-name">RClone Manager</h2>
     <p class="app-team">Developed by Hakan İSMAİL</p>
     <div class="version-info">
