--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,7 +79,7 @@
         <div class="empty-state">
           <div class="empty-state-content">
             <div class="icon-container">
-              <mat-icon svgIcon="rclone" class="empty-state-icon"></mat-icon>
+              <img src="assets/rclone.svg" alt="Rclone Logo" class="empty-state-icon" />
             </div>
             <h2>RClone Manager</h2>
             <p>
