--- a/src/app/features/components/dashboard/general-overview/general-overview.component.scss
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.scss
@@ -18,7 +18,7 @@
         gap: 16px;
         margin-bottom: 16px;
 
-        mat-icon {
+        .app-icon {
           width: var(--icon-size-xl);
           height: var(--icon-size-xl);
         }
